# duo-talk-evaluation

./: .gitignore  Makefile  README.md  duo-talk-evaluation.code-workspace  pyproject.toml  run_gui.sh
.claude/: CLAUDE.md  agents  commands  hooks  rules  skills
.github/: pull_request_template.md
artifacts/: 0002-pnext1-pr2.patch  0003-pnext1-pr3.patch  0004-pnext1-pr4.patch  exp_semantic_matcher_0001.patch  scn_mystery_mansion_v1_state.json  scn_mystery_mansion_v1_state.json.sha256  scn_mystery_mansion_v1_state2.json  scn_mystery_mansion_v1_state2.json.sha256  tmp_state.json  tmp_state.json.sha256  v1_0_0_release_notes.patch
docs/: GUI_MVP.md  P0_FREEZE_POLICY.md  PHASE0_DEEP_VERIFICATION_PLAN.md  change_policy.md  dev_workflow.md  duo-talk-verification-plan.md  duo-talkマイクロサービス化詳細設計書.md  first_10_minutes.md  gemini-api-guide.md  mystery_mansion_walkthrough.md  release_v1_0_0.md  triage_playbook.md  キャラクター設定プロンプト v3.0 改良案.md  キャラクター設定プロンプト v3.1 改良案.md  キャラクター設定プロンプト v3.2 改良案gemini.md  キャラクター設定プロンプト v3.3 改良案gemini.md  キャラクター設定プロンプト v3.4 改良案gemini.md  キャラクター設定プロンプト v3.5 改良案gemini.md  キャラクター設定プロンプト v3.6 改良案gemini.md  キャラクター設定プロンプト v3.7 改良案gemini.md  キャラクター設定プロンプト v3.8 改良案gemini.md  マイクロサービス Phase 2 v0.2 改善案.md  マイクロサービス Phase 2 v0.3 改善案.md  マイクロサービス Phase 2 v2.2 改善案.md  マイクロサービス Phase 2 v2.3 改善案.md  マイクロサービス Phase 2 v2.4 改善案.md  マイクロサービス Phase 2 v2.5 改善案.md  マイクロサービス Phase 2 v2.6 改善案.md  マイクロサービス Phase 2 v2.7 改善案.md  機能一覧.md
experiments/: __init__.py  compare_single.py  compare_systems.py  director_ab_test.py  director_comparison_test.py  forced_failure_test.py  (+18 more)
(+826 files in other folders)
